@@ -35,17 +35,15 @@ to correctly set all uid/gid information. As a workaround
 it got them from standard input.
 .TP 
 .B \-b backupdir
-Alternate backup directory. Defaults to `/vol/backup/$HOSTNAME'.
+Store the backup in \fIbackupdir\fR. This argument is mandatory.
 .TP
 .B \-c 
 Used in conjunction with \fBrdup\fR's \-c. This will allow
 \fBmirror.pl\fR to be used for remote backups.
 .TP
-.B \-r
+.B \-R
 Restore mode. Always write the file to the target directory and
 don't rename existing files to a +DD.HH:MM suffix.
-This mode also filters out any file with such a suffix - as you
-probably don't want those in your restore.
 .TP
 .B \-v
 Echo the files processed to standard error.
