@@ -28,8 +28,7 @@ $zipOptions .= "-d " if $opt{'d'};
 my $tmpDir = tempdir("rdup.backup.XXXXXX", TMPDIR => 1, CLEANUP => 1);
 die "** $tmpDir could not be created: $!" unless -d $tmpDir;
 
-while (($_ = <STDIN>))
-{
+while (($_ = <STDIN>)) {
         chomp;
         my($mode, $uid, $gid, $psize, $fsize) = split;
         my $dump = substr($mode, 0, 1);
@@ -42,12 +41,9 @@ while (($_ = <STDIN>))
         read STDIN, $path, $psize;
         $typ = 1 if ($mode & $S_ISDIR) == $S_ISDIR;
         $typ = 2 if ($mode & $S_ISLNK) == $S_ISLNK;
-        if ($dump eq '+')
-        {        # add
-                if ($typ == 0)
-                {      # REG
-                        if ($fsize != 0)
-                        {
+        if ($dump eq '+') {        # add
+                if ($typ == 0) {      # REG
+                        if ($fsize != 0) {
                                 my($fh, $filename) = tempfile("file.XXXXX", DIR => $tmpDir, SUFFIX => ".gz" );
                                 $fh->close();
                                 open ZIP, "|gzip $zipOptions -c > $filename" or die "** $filename: $!";
@@ -57,32 +53,22 @@ while (($_ = <STDIN>))
                                 syswrite STDOUT, "$dump$modebits $uid $gid $psize $size\n$path";
                                 catfile($filename);
                                 unlink $filename;
-                        }
-                        else
-                        {      # No content
+                        } else {      # No content
                                 syswrite STDOUT, "$dump$modebits $uid $gid $psize $fsize\n$path";
                         }
-                }
-                elsif ($typ == 1)
-                {      # DIR
+                } elsif ($typ == 1) {      # DIR
                         syswrite STDOUT, "$dump$modebits $uid $gid $psize $fsize\n$path";
-                }
-                elsif ($typ == 2)
-                {      # LNK
+                } elsif ($typ == 2) {      # LNK
                         my $target;
                         read STDIN, $target, $fsize;
                         syswrite STDOUT, "$dump$modebits $uid $gid $psize $fsize\n$path$target";
                 }
-        }
-        else
-        {
+        } else {
                 syswrite STDOUT, "$dump$modebits $uid $gid $psize $fsize\n$path";
         }
-
 }
 
-sub usage
-{
+sub usage {
         print "$progName [OPTIONS]\n\n";
         print "Compress or decompress the file's contents\n\n";
         print "OPTIONS:\n";
@@ -93,15 +79,13 @@ sub usage
         exit;
 }
 
-sub version
-{
+sub version {
         print "$progName: @PACKAGE_VERSION@ (rdup-utils)\n";
         exit;
 }
 
 
-sub sanity_check
-{
+sub sanity_check {
         my $dump = $_[0];
         my $mode = $_[1];
         my $psize = $_[2];
@@ -117,42 +101,36 @@ sub sanity_check
         die "** $progName: gid must be numeric"   unless $gid =~ "[0-9]+";
 }
 
-sub copy
-{
+sub copy {
         my $count = $_[0];
         my $pipe = $_[1];
 
         my $buf;
         my $n;
 
-        while ($count > 4096)
-        {
+        while ($count > 4096) {
                 $n = read STDIN, $buf, 4096;
                 syswrite $pipe, $buf, $n;
                 $count -= 4096;
         }
-        if ($count > 0)
-        {
+        if ($count > 0) {
                 $n = read STDIN, $buf, $count;
                 syswrite $pipe, $buf, $n;
         }
 }
 
-sub cat
-{
+sub cat {
         my $file = $_[0];
 
         my $buf;
         my $n;
 
-        while (($n = read $file, $buf, 4096) > 0)
-        {
+        while (($n = read $file, $buf, 4096) > 0) {
                 syswrite STDOUT, $buf, $n;
         }
 }
 
-sub catfile
-{
+sub catfile {
         my $name = $_[0];
         open FILE, "<$name" or die "** $name: $!";
         cat(*FILE);
