@@ -8,7 +8,7 @@ exec_prefix=@exec_prefix@
 cstream=@cstream@
 
 usage() {
-        echo "$PROGNAME [OPTIONS] DIR [DIR ...]"
+        echo "$PROGNAME -b DIR [OPTIONS] DIR [DIR ...]"
         echo 
         echo "This is a wrapper around rdup and mirror.sh"
         echo
